<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".Acelerometro">

    <ImageView
        android:layout_width="208dp"
        android:layout_height="321dp"
        android:contentDescription="@string/xyz_imagen"
        android:src="@drawable/acelerometro_plano"
        />

    <TextView
        android:id="@+id/Título_Acelerómetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Título_acelerometro"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/TextView_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_ValorX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/TextView_ValorY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/TextView_ValorZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/Boton_Detener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Rojo"
        android:text="@string/Detener"
        />


</LinearLayout>